# ssh-to-ansible

./: .codespellrc  .gitignore  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  justfile
.github/workflows/: ci.yaml  coverage.yaml  release.yaml
src/: main.rs
src/common/: cli.rs  error.rs  mod.rs  testing.rs  tracing.rs
src/core/: ansible.rs  mod.rs  parser.rs  ssh_config.rs  variables.rs
test/: sample_ssh_config
