[package]
name = "vagrant-to-ansible"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "v2a"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive", "string"] }
clap-verbosity-flag = "2.1.0"
console-subscriber = "0.2.0"
log = "0.4.20"
serde = { version = "1.0.192", features = ["derive"] }
serde_yaml = "0.9.27"
ssh2-config = "0.2.2"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
