[package]
name = "ssh-to-ansible"
version = "0.2.0"
authors = ["Marc Carré <carre.marc@gmail.com>"]
categories = ["command-line-utilities", "development-tools", "parsing"]
description = "A tool to convert a SSH configuration to an Ansible YAML inventory."
homepage = "https://github.com/marccarre/ssh-to-ansible"
repository = "https://github.com/marccarre/ssh-to-ansible"
readme = "README.md"
keywords = ["command-line", "ssh", "configuration", "ansible", "inventory", "vagrant", "development", "utility"]
license = "Apache-2.0"
edition = "2021"

[[bin]]
name = "s2a"
path = "src/main.rs"

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive", "string"] }
clap-verbosity-flag = "2.1.0"
console-subscriber = "0.2.0"
log = "0.4.20"
serde = { version = "1.0.192", features = ["derive"] }
serde_yaml = "0.9.27"
ssh2-config = "0.2.2"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["json"] }

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
tempfile = "3.8.1"
