[package]
name = "ssh-to-ansible"
version = "0.3.0"
authors = ["Marc Carré <carre.marc@gmail.com>"]
categories = ["command-line-utilities", "development-tools", "parsing"]
description = "A tool to convert a SSH configuration to an Ansible YAML inventory."
homepage = "https://github.com/marccarre/ssh-to-ansible"
repository = "https://github.com/marccarre/ssh-to-ansible"
readme = "README.md"
keywords = ["command-line", "ssh", "ansible", "development", "utility"]
license = "Apache-2.0"
edition = "2021"
include = [
    "README.md",
    "LICENSE.txt",
    "**/*.rs",
    "Cargo.toml",
]

[[bin]]
name = "s2a"
path = "src/main.rs"

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.17", features = ["derive", "string"] }
clap-verbosity-flag = "2.2.1"
derive_more = { version = "1.0.0", features = ["display", "from_str"] }
lazy_static = "1.5.0"
log = "0.4.22"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.33"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.26.3"
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
rstest = "0.22.0"
tempfile = "3.12.0"
